# librtlsdr-rs

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml  codeql.yml  deny.yml
src/: constants.rs  error.rs  lib.rs  reg.rs  usb.rs
src/device/: builder.rs  eeprom.rs  enumerate.rs  frequency.rs  gain.rs  mod.rs  reader.rs  sampling.rs  streaming.rs  streaming_async_std.rs  streaming_smol.rs  streaming_tokio.rs
src/tuner/: e4k.rs  fc0012.rs  fc0013.rs  fc2580.rs  mod.rs
src/tuner/r82xx/: i2c.rs  mod.rs  pll.rs
tests/: live_streaming.rs  live_streaming_smol.rs
