[package]
name = "sdr-rtlsdr"
version = "0.1.0"
description = "Pure Rust port of librtlsdr — RTL2832U USB control and tuner drivers"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusb.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Async-runtime integrations are opt-in. Each runtime gets its
# own feature flag so consumers pull in only what they use; the
# Iterator-based sync streaming path needs no features at all.
# Round 3a (this crate) adds `tokio`; round 3b will add `async-std`
# and `smol` with the same shape. Per #626.
futures-core = { version = "0.3", optional = true }
tokio = { version = "1", default-features = false, features = ["sync", "rt"], optional = true }
# `async-channel` provides a runtime-agnostic mpsc whose `Receiver`
# already implements `Stream`. Both async-std and smol streaming
# paths use it; tokio sticks with `tokio::sync::mpsc` for tokio-
# native ergonomics + zero new deps for tokio-only consumers.
async-channel = { version = "2", optional = true }
async-std = { version = "1", optional = true }
# `blocking` is the foundation crate smol uses for `unblock` —
# pulling it directly avoids dragging the whole `smol` crate in
# for one function. Same crate `smol::unblock` re-exports.
blocking = { version = "1", optional = true }

[features]
default = []
# Enables `RtlSdrDevice::stream_samples_tokio` — a `Stream` impl
# backed by `tokio::task::spawn_blocking` and `tokio::sync::mpsc`.
# Pulls in `tokio` (sync + rt features only; no multi-thread
# runtime dep) and `futures-core` for the `Stream` trait.
tokio = ["dep:tokio", "dep:futures-core"]
# Enables `RtlSdrDevice::stream_samples_async_std` — same shape
# as the tokio variant but using `async_std::task::spawn_blocking`
# and `async-channel` for the mpsc bridge.
async-std = ["dep:async-std", "dep:async-channel", "dep:futures-core"]
# Enables `RtlSdrDevice::stream_samples_smol` — same shape but
# using `blocking::unblock` (smol's foundation for offloading
# blocking work) and `async-channel`.
smol = ["dep:blocking", "dep:async-channel", "dep:futures-core"]

[lints]
workspace = true

[package.metadata.docs.rs]
# Build docs.rs's rendering with all runtime features enabled so
# the per-runtime streaming methods all show up in the published
# docs. Per-feature local builds (`cargo doc --features tokio`,
# etc.) still work — cross-runtime references in module docs use
# plain code spans (`super::streaming_tokio`) rather than
# intra-doc links so they don't break when only one feature is
# active.
all-features = true
