[package]
name = "librtlsdr-rs"
version = "0.1.1"
description = "Pure-Rust port of librtlsdr — RTL2832U USB control + tuner drivers, no C library required."
edition = "2024"
rust-version = "1.95"
license = "GPL-2.0-or-later"
repository = "https://github.com/jasonherald/librtlsdr-rs"
homepage = "https://github.com/jasonherald/librtlsdr-rs"
documentation = "https://docs.rs/librtlsdr-rs"
readme = "README.md"
keywords = ["sdr", "rtl-sdr", "rtl2832u", "rtlsdr", "radio"]
categories = ["hardware-support", "science", "embedded"]

# Files intentionally kept out of the published artifact: CI / dev-tool config,
# the rust-toolchain pin (consumers should pick their own), and the in-tree
# changelog (still useful in the GitHub repo, but not needed to compile).
exclude = [
    "/.github",
    "/.gitignore",
    "/deny.toml",
    "/rust-toolchain.toml",
]

[dependencies]
rusb = "0.9"
thiserror = "2"
tracing = "0.1"

# Async-runtime integrations are opt-in. Each runtime gets its
# own feature flag so consumers pull in only what they use; the
# Iterator-based sync streaming path needs no features at all.
futures-core = { version = "0.3", optional = true }
tokio = { version = "1", default-features = false, features = ["sync", "rt"], optional = true }
# `async-channel` provides a runtime-agnostic mpsc whose `Receiver`
# already implements `Stream`. The smol streaming path uses it; tokio
# sticks with `tokio::sync::mpsc` for tokio-native ergonomics + zero
# new deps for tokio-only consumers.
async-channel = { version = "2", optional = true }
# `blocking` is the foundation crate smol uses for `unblock` —
# pulling it directly avoids dragging the whole `smol` crate in
# for one function. Same crate `smol::unblock` re-exports.
blocking = { version = "1", optional = true }

[features]
default = []
# Enables `RtlSdrReader::stream_samples_tokio` — a `Stream` impl
# backed by `tokio::task::spawn_blocking` and `tokio::sync::mpsc`.
# Pulls in `tokio` (sync + rt features only; no multi-thread
# runtime dep) and `futures-core` for the `Stream` trait.
tokio = ["dep:tokio", "dep:futures-core"]
# Enables `RtlSdrReader::stream_samples_smol` — same shape as the
# tokio variant but using `blocking::unblock` (smol's foundation
# for offloading blocking work) and `async-channel` for the mpsc
# bridge. Smol is also the recommended replacement for async-std
# users; we don't ship an async-std backend because async-std
# itself is unmaintained (RUSTSEC-2025-0052).
smol = ["dep:blocking", "dep:async-channel", "dep:futures-core"]

[dev-dependencies]
# `tokio` with `macros + time + rt-multi-thread` for the
# `live_streaming.rs` integration tests (which run real USB
# bulk reads on a `multi_thread` runtime). The production
# `tokio` feature itself only needs `sync + rt` — dev-deps
# additions don't bleed into consumers.
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread", "sync", "rt"] }
# `StreamExt::next` for the live tests; `0.3` matches what
# `futures-core` resolves to in the regular dep tree.
futures-util = "0.3"
# `smol::block_on` runtime entry for the smol-feature live
# integration tests (`tests/live_streaming_smol.rs`). The
# production `smol` feature itself only needs `blocking` +
# `async-channel` — pulling in the umbrella `smol` crate is a
# dev-only dep that does not bleed into consumers.
smol = "2"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Flag unwrap/panic in library code
unwrap_used = "warn"
panic = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
# Build docs.rs's rendering with all runtime features enabled so
# the per-runtime streaming methods all show up in the published
# docs. Per-feature local builds (`cargo doc --features tokio`,
# etc.) still work.
all-features = true
